Asp.Net Mvc5 ile Tatil Seyahat Sitesi Murat Yucedag

--- a/Asp.Net Mvc5 Tatil&Seyahet/TravelTripProje/TravelTripProje/Views/Shared/_TestLayout.cshtml
+++ b/Asp.Net Mvc5 Tatil&Seyahet/TravelTripProje/TravelTripProje/Views/Shared/_TestLayout.cshtml
@@ -73,7 +73,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="footer-bottom">
         <div class="wrap">
             <div class="copy">
-                <p>&copy; @DateTime.Now.Year Easy-Trip. All Rights Reserved | Design by <a href="http://w3layouts.com">W3Layouts</a></p>
+                <p>&copy; @DateTime.Now.Year tatil-Seyahat. Tüm Hakları Saklıdır. | Design by <a href="http://w3layouts.com">W3Layouts</a></p>
             </div>
         </div>
     </div>
