--- a/Asp.Net Mvc5 Tatil&Seyahet/TravelTripProje/TravelTripProje/Views/Blog/Index.cshtml
+++ b/Asp.Net Mvc5 Tatil&Seyahet/TravelTripProje/TravelTripProje/Views/Blog/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using TravelTripProje.Models.Siniflar
-@model List<Blog>
+﻿
+@model TravelTripProje.Models.Siniflar.BlogYorum
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_TestLayout.cshtml";
@@ -43,12 +43,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="single">
         <div class="container">
             <div class="col-md-8 single-main">
-                @foreach (var item in Model)
+                @foreach (var item in Model.Deger1)
                 {
 
 
                     <div class="single-grid">
-                        <img src="@item.BlogImage" alt="" style="margin-bottom=20px"/>
+                        <img src="@item.BlogImage" alt="" style="margin-bottom=20px" />
                         <a href="/Blog/BlogDetay/@item.ID">@item.Baslik</a>
                         <p>
                             @item.Aciklama
@@ -59,33 +59,34 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             </div>
 
-                <div class="col-md-4 side-content">
-                    <div class="recent">
-                        <h3>SON BLOGLAR</h3>
+            <div class="col-md-4 side-content">
+                <div class="recent">
+                    <h3>SON BLOGLAR</h3>
+                    @foreach (var item in Model.Deger3)
+                    {
+                        
                         <ul>
-                            <li><a href="#">Aliquam tincidunt mauris</a></li>
-                            <li><a href="#">Vestibulum auctor dapibus  lipsum</a></li>
-                            <li><a href="#">Nunc dignissim risus consecu</a></li>
-                            <li><a href="#">Cras ornare tristiqu</a></li>
+                            <li><a href="/Blog/BlogDetay/@item.ID">@item.Baslik</a></li>
                         </ul>
-                    </div>
-                    <div class="comments">
-                        <h3>Son Yorumlar</h3>
-                        <ul>
-                            <li><a href="#">Amada Doe </a> on <a href="#">Hello World!</a></li>
-                            <li><a href="#">Peter Doe </a> on <a href="#"> Photography</a></li>
-                            <li><a href="#">Steve Roberts  </a> on <a href="#">HTML5/CSS3</a></li>
-                        </ul>
-                    </div>
-
-
-
-                    <div class="clearfix"></div>
+                    }
                 </div>
+                <div class="comments">
+                    <h3>Son Yorumlar</h3>
+                    <ul>
+                        <li><a href="#">Amada Doe </a> on <a href="#">Hello World!</a></li>
+                        <li><a href="#">Peter Doe </a> on <a href="#"> Photography</a></li>
+                        <li><a href="#">Steve Roberts  </a> on <a href="#">HTML5/CSS3</a></li>
+                    </ul>
+                </div>
+
+
+
                 <div class="clearfix"></div>
             </div>
+            <div class="clearfix"></div>
         </div>
-    </body>
+    </div>
+</body>
 </html>
 
 
